--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,6 +23,9 @@ const myComics = await getMyComics(week);
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" href="/favicon.png" sizes="any">
     <link rel="apple-touch-icon" href="/icon-512.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;1,300&display=swap" rel="stylesheet">
     <title>Comic releases for {week} week</title>
   </head>
   <body>
