--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,7 +6,9 @@ const { week } = Astro.props;
 
 async function getMyComics(week) {
   try {
-    const { data: { results } } = await getData(week);
+    const {
+      data: { results }
+    } = await getData(week);
     return results;
   } catch (error) {
     console.log(error);
@@ -14,18 +16,20 @@ async function getMyComics(week) {
 }
 
 const myComics = await getMyComics(week);
-
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/favicon.png" sizes="any">
-    <link rel="apple-touch-icon" href="/icon-512.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;1,300&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.png" sizes="any" />
+    <link rel="apple-touch-icon" href="/icon-512.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;1,300&display=swap"
+      rel="stylesheet"
+    />
     <title>Comic releases for {week} week</title>
   </head>
   <body>
