--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '@layouts/Layout.astro'
 
-const week = 'this';
+const week = 'this'
 ---
 
 <Layout {week} />
