--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Page from '@components/Page/Page.tsx'
+import Page from '@components/Page.tsx'
 import getUrl from '@functions/getUrl'
 
 export interface Props {
