--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
-import Page from '@components/Page.tsx'
-import getUrl from '@functions/getUrl'
+import Page from '++components/Page.tsx'
+import getUrl from '++functions/getUrl'
 
 export interface Props {
   week: string
