--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Page from '../components/Page.tsx'
+import Page from '../components/Page.astro'
 import getUrl from '../functions/getUrl'
 import { ViewTransitions } from 'astro:transitions'
 
