--- a/src/pages/next-week.astro
+++ b/src/pages/next-week.astro
@@ -1,7 +1,9 @@
 ---
+import getMyComics from '../data/getMyComics'
 import Layout from '../layouts/Layout.astro'
 
 const week = 'next'
+const comics = await getMyComics(week)
 ---
 
-<Layout {week} />
+<Layout {week} {comics} />
