--- a/src/components/Comic.astro
+++ b/src/components/Comic.astro
@@ -1,12 +1,12 @@
 ---
 import Details from './Details.astro'
-import ThumbnailType from '../types/ThumbnailType'
+import type ThumbnailType from '../types/ThumbnailType'
 
 const replaceHttp = (url: string) => url.replace('http', 'https')
 const getCover = ({ path, extension }: ThumbnailType) =>
   `${replaceHttp(path)}.${extension}`
 
-const { thumbnail, title, creators } = Astro.props
+const { thumbnail, title, creators, series, prices, pageCount } = Astro.props
 ---
 
 <div>
@@ -17,5 +17,5 @@ const { thumbnail, title, creators } = Astro.props
     height="850"
     alt={title}
   />
-  <Details {title} {creators} />
+  <Details {title} {creators} {series} {prices} {pageCount} />
 </div>
