--- a/src/pages/this-week.astro
+++ b/src/pages/this-week.astro
@@ -3,7 +3,13 @@ import getMyComics from '../data/getMyComics'
 import Layout from '../layouts/Layout.astro'
 
 const week = 'this'
-const { comics, attributionText } = await getMyComics(week)
+let comics = []
+let attributionText = ''
+try {
+  const response = await getMyComics(week)
+  comics = response.comics
+  attributionText = response.attributionText
+} catch {}
 ---
 
 {comics && <Layout {week} {comics} {attributionText} />}
