--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Page from '../components/Page.astro'
 import { ViewTransitions } from 'astro:transitions'
+import '../styles/global.css'
 
 export interface Props {
   week: string
