--- a/src/components/mighty-dinosaur.astro
+++ b/src/components/mighty-dinosaur.astro
@@ -52,10 +52,10 @@
 
 <style>
   .mighty {
-    @apply fill-rose-600;
+    fill: var(--color-rose-600);
   }
 
   .dinosaur {
-    @apply fill-rose-300;
+    fill: var(--color-rose-300);
   }
 </style>
