--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -15,7 +15,7 @@ const baseLinkStyles =
   <div class="mx-auto max-w-7xl px-2 py-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
       <div class="flex flex-1 items-center justify-start">
-        <div class="flex flex-shrink-0 items-center">
+        <div class="flex shrink-0 items-center">
           <img
             src="logo.svg"
             alt="MVL"
@@ -43,7 +43,7 @@ const baseLinkStyles =
         </nav>
       </div>
       <div class="flex items-center">
-        <div class="flex-shrink-0">
+        <div class="shrink-0">
           <h1 class="font-montserrat font-light text-rose-100">
             {`Comic releases for ${week} week`}
           </h1>
