--- a/src/components/Details.astro
+++ b/src/components/Details.astro
@@ -4,14 +4,14 @@ const { creators, title, series, pageCount, prices } = Astro.props
 
 <div class="px-5 py-5">
   <div>
-    <h2 class="mb-3 font-montserrat text-lg font-medium text-stone-800">
+    <h2 class="font-montserrat mb-3 text-lg font-medium text-stone-800">
       {title}
     </h2>
   </div>
   <ul class="list-none">
     {
       creators?.items?.map((creator) => (
-        <li class="mb-1 font-montserrat font-light text-stone-800">
+        <li class="font-montserrat mb-1 font-light text-stone-800">
           {creator.name} - <em>{creator.role}</em>
         </li>
       ))
